data/all_generated_tests/raw_wast_tests/br_table_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2569.wast
;; 8. **Control Flow Loop with Imported Functions:**    - Implement a loop with `br_table` branching to an imported function within one of its target labels.    - **Constraint Checked:** Verification of loop consistency, control flow, and operand stack integrity within `br_table` when involving imported functions.    - **Reasoning:** Checks that the control flow loop correctly unwinds and maintains integrity during cross-module calls.

(assert_invalid
  (module
    (import "env" "external_func" (func $external_func))
    (func $loop_with_import_and_br_table
      (block
        (loop
          (br_table 0 (i32.const 0))
          (call $external_func)
        )
      )
    )
  )
  "type mismatch"
)